# vaibify

./: .buildinfo  .gitignore  AGENTS.md  CLAUDE.md  README.md  architecture.html  cli.html  conduct.html  configuration.html  container.conf.template  cosmic-ray.toml  dashboard.html  developers.html  externalServices.html  falsification.json  genindex.html  gui.html  index.html  install.html  invariants.json  objects.inv  philosophy.html  pipelines.html  prompt  pyproject.toml  pytest.ini  quickStart.html  repos.html  reproducibility.html  search.html  searchindex.js  security.html  setupWizard.html  skillTesting.html  templates.html  testFormats.html  testing.html  tests.json  vaibify_logo.key  vconverge_debug_instructions.md  (+2 more)
.claude/: settings.json
.claude/hooks/: askSensitiveEdit.py  blockDestructiveGit.py
.doctrees/: architecture.doctree  cli.doctree  conduct.doctree  configuration.doctree  dashboard.doctree  developers.doctree  environment.pickle  externalServices.doctree  gui.doctree  index.doctree  install.doctree  philosophy.doctree  pipelines.doctree  quickStart.doctree  repos.doctree  reproducibility.doctree  security.doctree  setupWizard.doctree  skillTesting.doctree  templates.doctree  testFormats.doctree  testing.doctree  vibeCoding.doctree  vision.doctree
.doctrees/migration/: 2026-workflow-in-repo.doctree
.github/workflows/: agentDocsPathCheck.yml  badges.yml  docs.yml  falsification.yml  mutation.yml  pip-install.yml  tests-linux.yml  tests-macos.yml
_downloads/071a727d86c84f46a49b7d8542c384a1/: githubMirror.py
_downloads/0f3b7ad8fbb8d21a0beaf8aded2b3d7a/: environmentSnapshot.py
_downloads/1ae75908aea21574aa8bee9e6a8af331/: overleafAuth.py
_downloads/1d83a842acb2e755441ec53eac1ba064/: githubAuth.py
_downloads/261910b7bc812877113d8f941d31858d/: gitHardening.py
_downloads/3405b5846375450e67875d28d8ab9cae/: testOverleafMirror.py
_downloads/34ece52405efd401fe12881cb1685ef5/: containerGit.py
_downloads/42ade8c3706a6e3b577a89d8b97ac21f/: containerManager.py
_sources/: architecture.md.txt  cli.md.txt  conduct.rst.txt  dashboard.md.txt  developers.md.txt  externalServices.md.txt  gui.md.txt  index.rst.txt  install.md.txt  philosophy.md.txt  pipelines.md.txt  quickStart.md.txt  reproducibility.md.txt  setupWizard.md.txt  templates.md.txt  testFormats.md.txt  vision.md.txt
_static/: documentation_options.js
completions/: vaibcask.bash  vaibcask.zsh  vaibify.bash  vaibify.zsh
docker/: Dockerfile  Dockerfile.claude  Dockerfile.julia  Dockerfile.jupyter  Dockerfile.rlang  container.conf  director.py  entrypoint.sh  vaibifyDo.py
docs/: architecture.md  cli.md  conf.py  configuration.md  dashboard.md  developers.md  externalServices.md  gui.md  index.rst  install.md  philosophy.md  pipelines.md  quickStart.md  repos.md  reproducibility.md  security.md  setupWizard.md  skillTesting.md  templates.md  testing.md  vibeCoding.md  vision.md
migration/: 2026-workflow-in-repo.html
templates/: workflow.yml.j2
tests/: conftest.py  falsificationRegistry.py  testAICSGateLevel1.py  testAICSLadderUncoveredLines.py  testAICSLevelInPollResponse.py  testActionCatalog.py  testAgentSessionBridge.py  testAiDeclarationAddStepAndDeterminismRoutes.py  testAiDeclarationStepKind.py  testAiProvenanceStamp.py  testArchitecturalInvariants.py  testArchiveFeatures.py  testArxivClient.py  testArxivConfigureRoute.py  testArxivPathTraversal.py  testAttributionLog.py  testAutoArchive.py  testBadgeState.py  testBinaryDeclaration.py  testBinaryDrift.py  testBinaryStaleWarning.py  testBindMountValidator.py  testBuildCacheInvalidation.py  testBuildErrorClassification.py  testBuildFailureModalFrontendContract.py  testClaimRoutes.py  testCliApiCommands.py  testCliCommands.py  testCliMain.py  testCliPipelineDispatch.py  testCliStatusDestroy.py  testCliSubcommands.py  testColimaHostagentLogProbe.py  testColimaVersionPreflight.py  testCommandBuild.py  testCommandBuildBaseImagePin.py  testCommandBuildPipFlags.py  testCommandBuildPreflight.py  testCommandDoctor.py  testCommandGenerateStandards.py  (+294 more)
tools/: checkAgentDocsPaths.py  evaluateSkillOutcomes.py  evaluateSkillTriggers.py  listModules.py  reconfirmFalsification.py
vaibcask/: __main__.py
vaibify/: __main__.py  _version.py
(+325 files in other folders)
