[build-system]
requires = ["setuptools>=65", "setuptools_scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vaibcask"
dynamic = ["version"]
description = "Vibe boldly. Verify everything."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Rory Barnes", email = "rory@astro.washington.edu"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "websockets>=11.0",
    "aiofiles>=23.0",
    "jinja2>=3.1",
    "tqdm>=4.60",
    "requests>=2.28",
]

[project.optional-dependencies]
docker = ["docker>=6.0"]
keyring = ["keyring>=23.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-asyncio",
    "httpx",
]
all = ["vaibcask[docker,keyring,dev]"]

[project.scripts]
vaibcask = "vaibcask.cli.main:main"
vc = "vaibcask.cli.main:main"

[project.urls]
Homepage = "https://github.com/RoryBarnes/VaibCask"
Documentation = "https://vaibcask.readthedocs.io"

[tool.setuptools_scm]
write_to = "vaibcask/_version.py"

[tool.setuptools.packages.find]
include = ["vaibcask*"]

[tool.setuptools.package-data]
"vaibcask.gui" = ["static/*"]

[tool.black]
line-length = 79

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "docker: tests that require a running Docker daemon",
]
