[build-system]
requires = ["setuptools>=65", "setuptools_scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vaibify"
dynamic = ["version"]
description = "Vibe boldly. Verify everything."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Rory Barnes", email = "rory@astro.washington.edu"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "fastapi>=0.115.0",
    "starlette>=0.49.1",
    "uvicorn>=0.20",
    "websockets>=11.0",
    "aiofiles>=23.0",
    "jinja2>=3.1.6",
    "tqdm>=4.60",
    "requests>=2.28",
    "h5py>=3.0",
    "openpyxl>=3.0",
    "Pillow>=9.0",
    "pyarrow>=10.0",
    "astropy>=5.0",
    "scipy>=1.9",
    "pyvista>=0.38",
    "pysam>=0.20",
    "pyreadstat>=1.2",
    "pyreadr>=0.5",
    "safetensors>=0.3",
    "tfrecord>=1.14",
    "scapy>=2.5",
    "docker>=6.0",
    "keyring>=23.0",
    "pytest>=7.0",
    "pytest-cov",
]

[project.optional-dependencies]
dev = [
    "pytest-asyncio",
    "httpx",
]

[project.scripts]
vaibify = "vaibify.cli.main:main"
vaib = "vaibify.cli.main:main"

[project.urls]
Homepage = "https://github.com/RoryBarnes/Vaibify"
Documentation = "https://vaibify.readthedocs.io"

[tool.setuptools_scm]
write_to = "vaibify/_version.py"

[tool.setuptools.packages.find]
include = ["vaibify*"]

[tool.setuptools.package-data]
"vaibify.gui" = ["static/*"]

[tool.black]
line-length = 79

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "docker: tests that require a running Docker daemon",
]

[tool.coverage.run]
source = ["vaibify"]
omit = [
    "vaibify/_version.py",
    "*/tests/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.coverage.html]
directory = "htmlcov"
